qtvirtualkeyboard-opensource-src (5.9.2+dfsg-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Refresh disable_test_qtbug_61279.patch.
  * Bump Qt build-dependencies to 5.9.2.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 23 Oct 2017 22:44:11 +0300

qtvirtualkeyboard-opensource-src (5.9.1+dfsg-3) unstable; urgency=medium

  * Disable failing test, see https://bugreports.qt.io/browse/QTBUG-61279.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 17 Aug 2017 11:36:23 -0300

qtvirtualkeyboard-opensource-src (5.9.1+dfsg-2) unstable; urgency=medium

  * Merge release 5.7.1+dfsg-2 into the experimental branch. The repeated
    changelog entries were kept due to both packages introducing them in
    separate places.
  * Release to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 16 Aug 2017 15:42:04 -0300

qtvirtualkeyboard-opensource-src (5.9.1+dfsg-1) experimental; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Add pkg-config as a build dependency, it is used to detect the system's
    hunspell.
  * Revert the internal dependencies order: it's the plugin that needs the
    QML module and not the other way around.

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.9.1.
  * Do not exclude the whole src/virtualkeyboard/3rdparty/ directory from
    the tarball, but only its tcime and pinyin subdirectories.
  * Drop disable_third_party.patch, third-party stuff is already disabled
    by default (except hunspell).
  * Update debian/copyright.
  * Bump Standards-Version to 4.0.0, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 16 Jul 2017 22:03:40 +0300

qtvirtualkeyboard-opensource-src (5.7.1+dfsg-2) unstable; urgency=medium

  * Add pkg-config as a build dependency, it is used to detect the system's
    hunspell.
  * Revert the internal dependencies order: it's the plugin that needs the